--- a/app/templates/analytics.html
+++ b/app/templates/analytics.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Análisis de Tendencias</title>
     <link href="../static/css/output.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../static/img/quality_icon_129049.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
+    
 
 </head>
 
