--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,8 +6,9 @@
     <title>Calidad del Aguaymanto</title>
     <link href="../static/css/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+    <link rel="shortcut icon" href="../static/img/quality_icon_129049.ico" type="image/x-icon">
     <link rel="stylesheet" as="style" onload="this.rel='stylesheet'"
-          href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900">
+        href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900">
 </head>
 <body class="bg-white font-sans leading-normal tracking-normal">
 
